# avidemux-svn

branches/avidemux_2.1_branch/avidemux/: ADM_assert.h  ADM_guiBitrate.cpp  ADM_memsupport.cpp  ADM_pp.cpp  ADM_pp.h  ADM_requantize.cpp  GUI_jobs.cpp  Makefile.am  avi_vars.h  callbacks.cpp  gtk_gui.cpp  gtkgui.h  gui_action.hxx  gui_navigate.cpp  gui_savenew.cpp  guiplay.cpp  main.cpp  prefs.cpp  prefs.h  prefs.in
branches/avidemux_2.2_branch/avidemux/: ADM_assert.h  ADM_guiBitrate.cpp  ADM_lavcodec.h  ADM_memsupport.cpp  ADM_pp.cpp  ADM_pp.h  ADM_requantize.cpp  GUI_jobs.cpp  Makefile.am  avi_vars.h  callbacks.h  gtk_gui.cpp  gui_action.hxx  gui_autodrive.cpp  gui_savenew.cpp  guiplay.cpp  main.cpp  prefs.cpp  prefs.h  prefs.in  prototype.h
branches/avidemux_2.4_branch/: CMakeLists.txt  ConfigureChecks.cmake  INSTALL  avidemux2.desktop  config.h.cmake  configure.in.bot  configure.in.in
branches/avidemux_2.4_branch/admin/: prefs_gen.pl
branches/avidemux_2.4_branch/avidemux/: ADM_assert.h  ADM_guiBitrate.cpp  ADM_pp.cpp  ADM_preview.cpp  CMakeLists.txt  GUI_jobs.cpp  Makefile.am  avi_vars.h  avilist.h  callbacks.cpp  gtk_gui.cpp  gtkgui.h  gui_action.hxx  gui_action.names  gui_autodrive.cpp  gui_navigate.cpp  gui_savenew.cpp  guiplay.cpp  libcheck.sh  main.cpp  prefs.cpp  prefs.h  prefs.in  prototype.h  script_to_build_plugin_on_windows.sh
branches/avidemux_2.4_branch/cmake/: FindArts.cmake  FindSubversion.cmake  FindX11.cmake  Po.cmake  Ts.cmake  admSDL.cmake  adm_checkHeaderLib.cmake  adm_compile.cmake  adm_qt4.cmake  conf_summary.cmake  lavcodec.cmake
branches/avidemux_2.4_branch/debian/: changelog  control  menu  rules
branches/avidemux_2.4_branch/po/: LINGUAS  Makefile.am  Makefile.in.in  POTFILES.in  avidemux.pot  avidemux_cs.ts  avidemux_fr.ts  avidemux_it.ts  ca.po  cs.po  de.po  el.po  es.po  fr.po  it.po  ja.po  jp.po  klingon.po  pt_BR.po  qt_it.ts  ru.po  sr.po  sr@Latn.po  sr@latin.po  tr.po  update_pot.bash
branches/avidemux_2.5_branch_gruntster/: CMakeLists.txt  bootStrap.sh  config.h.cmake
branches/avidemux_2.5_branch_gruntster/autononreg/: nbframestest.js
branches/avidemux_2.5_branch_gruntster/avidemux/: ADM_assert.h  ADM_preview.cpp  CMakeLists.txt  GUI_jobs.cpp  avi_vars.h  gtk_gui.cpp  gui_action.cpp  gui_action.names  gui_autodrive.cpp  gui_navigate.cpp  gui_savenew.cpp  guiplay.cpp  main.cpp  prefs.h  prefs.in
branches/avidemux_2.5_branch_gruntster/cmake/: ADM_coreConfig.h.cmake  FindAlsa.cmake  FindGitSvn.cmake  FindQT4.cmake  FindSDL.cmake  FindSubversion.cmake  FindThreads.cmake  Po.cmake  ad_plugin.cmake  admCheckAmrnb.cmake  admCheckAudioCodecLibs.cmake  admCheckAudioDeviceLibs.cmake  admCheckAudioEncoderLibs.cmake  admCheckDca.cmake  admCheckFaad.cmake  admCheckGettext.cmake  admCheckGtk.cmake  admCheckLibxml2.cmake  admCheckMiscLibs.cmake  admCheckOpencore.cmake  admCheckQt4.cmake  admCheckRequiredLibs.cmake  admCheckUserInterfaceLibs.cmake  admCheckVideoCodecLibs.cmake  admCheckX264.cmake  admConfigHelper.cmake  admConfigSummary.cmake  admDetermineSystem.cmake  admFFmpegBuild.cmake  admFFmpegMake.cmake  admFFmpegPatch.cmake  admFFmpegPrepareTar.cmake  admFFmpegUtil.cmake  admGetRevision.cmake  admLibFfmpeg.cmake  admLibavcodec.cmake  admPluginConfigSummary.cmake  admPluginVideoEncoder.cmake  admSetLavcodecFlags.cmake  adm_qt4.cmake  (+8 more)
branches/avidemux_2.5_branch_gruntster/cmake_compile_check/: os_unix_check.cpp  ssse3_check.cpp
branches/avidemux_2.5_branch_gruntster/plugins/: CMakeLists.txt
branches/avidemux_2.5_branch_gruntster/po/: POTFILES.in  avidemux.pot  avidemux.pro  avidemux_ca.ts  avidemux_cs.ts  avidemux_de.ts  avidemux_el.qm  avidemux_el.ts  avidemux_es.ts  avidemux_fr.ts  avidemux_it.ts  avidemux_ja.ts  avidemux_pl.ts  avidemux_pt_BR.ts  avidemux_ru.ts  avidemux_sr.ts  avidemux_sr@latin.ts  avidemux_tr.ts  avidemux_zh_TW.ts  ca.po  cs.po  de.po  es.po  fr.po  hu.po  it.po  pt_BR.po  qt_filter_context.xslt  qt_fr.ts  qt_update_pro.sh  ru.po  update_pot.bash  zh_CN.po  zh_TW.po
branches/avidemux_2.5_branch_gruntster/scripts/: CMakeLists.txt
branches/avidemux_2.5_branch_mean_merged/avidemux/: ADM_lavcodec.h  CMakeLists.txt  avi_vars.h  gtk_gui.cpp  gui_savenew.cpp  main.cpp
branches/avidemux_2.7/avidemux_ffmpeg/: CMakeLists.txt  ConfigureFFmpeg.cmake  CreateConfigureBootstrap.cmake  PrepareSource.cmake  admFFmpegPrepareTar.cmake  ffmpegPackageDebian.cmake  ffmpegPackageRpm.cmake  ffmpegPackageTarGz.cmake  ffmpeg_configure.sh.cmake
branches/avidemux_2.7/avidemux_plugins/: CMakeLists.txt  pluginsPackageDebian.cmake
tags/avidemux_2.4.2/avidemux/: CMakeLists.txt  gtk_gui.cpp  gui_action.cpp  gui_action.names  script_to_build_plugin_on_windows.sh
tags/avidemux_2.4.4/: CMakeLists.txt  ConfigureChecks.cmake  Makefile.dist  configure.in.in
tags/avidemux_2.4.4/avidemux/: .cvsignore  ADM_assert.h  CMakeLists.txt  Makefile.am  gtk_gui.cpp  gtkgui.h  gui_savenew.cpp  guiplay.cpp
tags/avidemux_2.4.4/cmake/: lavcodec.cmake
tags/avidemux_2.4.4/po/: avidemux.pot
trunk/avidemux/: History  Makefile.am  acinclude.m4  config.h.in  configure.in.in  gtk2_build.glade  subdirs
trunk/avidemux/adm_lavcodec/: Makefile  Makefile.am  allcodecs.c  avcodec.h  common.h  config.mak  dsputil.h  fft.c  ffv1.c  h263.c  h263dec.c  huffyuv.c  mem.c  mpeg12.c  mpegvideo.c  mpegvideo.h  ratecontrol.c  snow.c  utils.c
trunk/avidemux/admin/: cvs.sh  detect-autoconf.sh  mkinstalldirs
trunk/avidemux/avidemux/: ADM_assert.h  ADM_guiBitrate.cpp  ADM_memsupport.cpp  ADM_pp.cpp  ADM_requantize.cpp  Makefile.am  admmangle.h  avi_vars.h  avilist.cpp  avilist.h  callbacks.cpp  gtk_gui.cpp  gtkgui.h  gui_action.hxx  gui_keyframes.cpp  gui_navigate.cpp  gui_rgb.cpp  gui_savenew.cpp  guiplay.cpp  main.cpp  prefs.cpp  prefs.h  prefs.in  prototype.h  wget-log
trunk/avidemux/po/: .cvsignore  Makefile.am  de.po  ru.gmo
trunk/xsub2srt/: ChangeLog  Makefile.am  configure.in  xsub2srt.kdevelop
trunk/xsub2srt/ADM_library/: ADM_assert.h
trunk/xsub2srt/ADM_toolkit/: ADM_debug.cpp  ADM_debugID.h  Makefile.am  TLK_filesel.cpp  support.h  toolkit.cpp  (+3 more)
(+8104 files in other folders)
